<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:padding="@dimen/root_padding"
    tools:context="com.morelink.mirror7.WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="70dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">
        <!-- Current Weather -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/cur_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="2017-11-26"
                    android:textSize="@dimen/weather_fontsize"/>
                <TextView
                    android:id="@+id/cur_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Mon"
                    android:textSize="@dimen/weather_fontsize"/>
                <TextView
                    android:id="@+id/cur_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    android:text="17~22"
                    android:textSize="@dimen/weather_fontsize"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/cur_weather_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
            />
        </LinearLayout>

        <!-- Divider -->
        <LinearLayout
            android:id="@+id/layout_future_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:visibility="invisible"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        </LinearLayout>

        <!-- Future Weather -->
        <LinearLayout
            android:id="@+id/layout_future"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fea_1_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Mon"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/fea_1_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="18~23"
                    android:textAlignment="center"/>
                <ImageView
                    android:id="@+id/fea_1_weather_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp" />
                <TextView
                    android:id="@+id/fea_1_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Cloud"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fea_2_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Mon"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/fea_2_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="18~23"
                    android:textAlignment="center"/>
                <ImageView
                    android:id="@+id/fea_2_weather_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp" />
                <TextView
                    android:id="@+id/fea_2_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Cloud"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fea_3_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Mon"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/fea_3_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="18~23"
                    android:textAlignment="center"/>
                <ImageView
                    android:id="@+id/fea_3_weather_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp" />
                <TextView
                    android:id="@+id/fea_3_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_feature_fontsize"
                    android:text="Cloud"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Current Time and Temperature -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/cur_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="@dimen/weather_fontsize_big"/>
                <TextView
                    android:id="@+id/cur_time_half"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AM"
                    android:textSize="@dimen/weather_fontsize"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="室内温度"
                    android:textSize="@dimen/weather_fontsize"/>
                <TextView
                    android:id="@+id/cur_room_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textSize="@dimen/weather_fontsize_big"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/action_wifi"
        android:layout_width="@dimen/action_btn_width"
        android:layout_height="@dimen/action_btn_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/backgroud"
        android:text="@string/icon_wifi"
        android:textSize="@dimen/action_fontsize"
        android:onClick="actionWireless"
    ></Button>

    <Button
        android:id="@+id/action_close"
        android:layout_width="@dimen/action_btn_width"
        android:layout_height="@dimen/action_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/backgroud"
        android:text="@string/icon_close"
        android:textSize="@dimen/action_fontsize"
        android:onClick="actionClose"
        tools:ignore="OnClick"
    ></Button>

    <Button
        android:id="@+id/action_music"
        android:layout_width="@dimen/action_btn_width"
        android:layout_height="@dimen/action_btn_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroud"
        android:text="@string/icon_music"
        android:textSize="@dimen/action_fontsize"
    />

    <RelativeLayout
        android:layout_width="@dimen/action_btn_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/action_close"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/action_light_margin_bottom"
        android:orientation="vertical"
        android:padding="0dp"
    >
        <Button
            android:id="@+id/action_lightdown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_btn_height"
            android:layout_alignParentBottom="true"
            android:text="@string/icon_lightdown"
            android:textSize="@dimen/action_fontsize"
            android:background="@color/backgroud"
            android:onClick="lightDown"
            tools:ignore="OnClick" />
        <View
            android:id="@+id/action_lightdriver"
            android:layout_width="1dp"
            android:layout_height="@dimen/action_light_driver_height"
            android:background="@color/text"
            android:layout_above="@id/action_lightdown"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/action_lightup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_btn_height"
            android:layout_above="@id/action_lightdriver"
            android:text="@string/icon_lightup"
            android:textSize="@dimen/action_fontsize"
            android:background="@color/backgroud"
            android:onClick="lightUp"
            tools:ignore="OnClick" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_alignTop="@id/action_lightdriver"
            android:layout_alignBottom="@id/action_lightdriver"
            android:onClick="lightLevelMid"
            tools:ignore="OnClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_light_per_height"
            android:background="@android:color/transparent"
            android:layout_alignTop="@id/action_lightdriver"
            android:onClick="lightLevelHigh"
            tools:ignore="OnClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_light_per_height"
            android:background="@android:color/transparent"
            android:layout_alignBottom="@id/action_lightdriver"
            android:onClick="lightLevelLow"
            tools:ignore="OnClick"/>
    </RelativeLayout>
</RelativeLayout>
